--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <a class="nav-link" href="#">Replays</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="loginpage.html">Login</a>
                   </li>
 
               </ul>
