--- a/loginpage.html
+++ b/loginpage.html
@@ -1,1 +1,11 @@
 <!--This page will be used to login-->
+
+<html>
+	<head>
+		<title>Login</title>
+	</head>
+
+	<body>
+		<h1>This is the login page... Svvn yvv wvll svv...</h1>
+	</body>
+</html>
