"Removed unnecessary files and modded login"

--- a/webServer/loginpage.html
+++ b/webServer/loginpage.html
@@ -6,7 +6,7 @@
         <form action="authenticate.php">
                 <div>
                 <input type="text" name="uname">username<br>
-                <input type="text" name="password">password<br>
+                <input type="password" name="password">password<br>
                 </div>
 
                 <div>
