--- a/webServer/index.html
+++ b/webServer/index.html
@@ -36,7 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="loginpage.html">Login</a>
                   </li>
-
+		<li class="nav-item">
+			<a class="nav-link" href="registerpage.html">Register</a>
+		</li>
               </ul>
             </div>
           </nav>
