Edited Loginpage and have Register redirects and added Registering new user functionality

--- a/webServer/registerpage.html
+++ b/webServer/registerpage.html
@@ -1,12 +1,14 @@
 <!--This page will be used to Register-->
 
 <html>
-        <h1>Register Page</h1>
+        <h1>Register Your Account</h1>
         <body>
         <form action="register.php">
                 <div>
                 <input type="text" name="uname">username<br>
+		<input type="text" name="email">email<br>
                 <input type="text" name="password">password<br>
+		<input type="text" name="confPassword">Confirm password<br>
                 </div>
 
                 <div>
