--- a/webServer/index.html
+++ b/webServer/index.html
@@ -16,7 +16,7 @@
 
     <body>
 
-        <!--This <nav> is for the navbar at the top of the page-->>
+        <!--This <nav> is for the navbar at the top of the page-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">UFCFightSim</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,11 +35,11 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="loginpage.html">Login</a>
-                  </li>
+                 </li>
 		<li class="nav-item">
-			<a class="nav-link" href="registerpage.html">Register</a>
-		</li>
-              </ul>
+                    <a class="nav-link" href="registerpage.html">Register</a>
+                 </li>
+               </ul>
             </div>
           </nav>
 
