--- a/webServer/loginpage.html
+++ b/webServer/loginpage.html
@@ -3,16 +3,22 @@
 <html>
         <h1>Login Page</h1>
         <body>
-        <form action="authenticate.php">
+	<!-- <form action="/cgi-bin/test.py"> -->
+	<form action="authenticate.php">
                 <div>
                 <input type="text" name="uname">username<br>
-                <input type="password" name="password">password<br>
+                <input type="text" name="password">password<br>
                 </div>
 
                 <div>
                 <input type="submit" value="Login">
                 </div>
         </form>
+	<form action="registerpage.html">
+		<div>
+			<input type="submit" value="Register an Account">
+		</div>
+	</form>
         </body>
 </html>
 
