--- a/webServer/index.html
+++ b/webServer/index.html
@@ -39,6 +39,9 @@
 		<li class="nav-item">
                     <a class="nav-link" href="registerpage.html">Register</a>
                  </li>
+		 <li class="nav-item">
+                    <a class="nav-link" href="loadoutpage.html">Loadouts(Test)</a>
+                 </li>
                </ul>
             </div>
           </nav>
