Added password hashing to the backend and input validation for registering.

--- a/webServer/index.html
+++ b/webServer/index.html
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="registerpage.html">Register</a>
                  </li>
 		 <li class="nav-item">
-                    <a class="nav-link" href="loadoutpage.html">Loadouts(Test)</a>
+                    <a class="nav-link" href="loadoutpage.php">Loadouts(Test)</a>
                  </li>
                </ul>
             </div>
