profile pahe stuff

--- a/webServer/profilepage.html
+++ b/webServer/profilepage.html
@@ -54,7 +54,52 @@ th, td{
 
 	</table>
 
-
-
 </html>
 
+<script>
+<?php
+
+if (!$continue)
+{
+        echo "Debug Exit Message";
+        exit();
+}
+require_once('path.inc');
+require_once('get_host_info.inc');
+require_once('rabbitMQLib.inc');
+
+$client = new rabbitMQClient("testRabbitMQ.ini","testServer");
+if (isset($argv[1]))
+{
+  $msg = $argv[1];
+}
+else
+{
+  $msg = "Default Register Message";
+}
+
+$request = array();
+$request['type'] = "getProfile";
+$response = $client->send_request($request);
+
+//$response = $client->publish($request);
+
+echo "client received response: ".PHP_EOL;
+//print_r($response);
+echo "\n\n";
+
+echo $argv[0]." END".PHP_EOL;
+
+if ($response["returnCode"] == '0')
+{
+        echo "Grabbed profile".PHP_EOL;
+}
+else
+{
+        echo "Failed to grab profile".PHP_EOL;
+}
+echo $response;
+
+?>
+
+</script>
