--- a/webServer/index.html
+++ b/webServer/index.html
@@ -40,7 +40,10 @@
                     <a class="nav-link" href="registerpage.html">Register</a>
                  </li>
 		 <li class="nav-item">
-                    <a class="nav-link" href="loadoutpage.php">Loadouts(Test)</a>
+                    <a class="nav-link" href="loadoutpage.php">Loadouts</a>
+                 </li>
+		  <li class="nav-item">
+                    <a class="nav-link" href="profilepage.php">Profile Page</a>
                  </li>
                </ul>
             </div>
