--- a/webServer/index.html
+++ b/webServer/index.html
@@ -45,6 +45,9 @@
 		  <li class="nav-item">
                     <a class="nav-link" href="profilepage.php">Profile Page</a>
                  </li>
+		 <li class="nav-item">
+			<a class="nav-link" href="logout.php">Logout</a>
+                 </li>
                </ul>
             </div>
           </nav>
