--- a/webServer/index.html
+++ b/webServer/index.html
@@ -28,7 +28,7 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Simulate!</a>
+                  <a class="nav-link" href="http://192.168.194.99:3000">Fight!</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Replays</a>
