--- a/webServer/gameClient/chooseWeight.html
+++ b/webServer/gameClient/chooseWeight.html
@@ -47,7 +47,7 @@
             <div id="GoodSide" style="width:33%; float:left; padding:20px; border:2px">
 
                 <div id="Fighter01" style="text-align:right">
-                    <h3 id="FighterName01">Sample Fighter 01</h3><br>
+                    <h3 id="FighterName01">Sample Fighter 01</h3><p id = fighter01Status> </p><br>
                     <progress id="fighter01Health" value="200" max="200"></progress><br><br>
                     <div id="f1_Moves">
                         <button id="f1_Move1" onclick="move1()">Jab</button><br>
@@ -55,34 +55,34 @@
                         <button id="f1_Move3" onclick="move3()">Rear Naked Choke</button><br>
                         <button id="f1_Move4" onclick="move4()">Just Bleed</button><br>
                     </div>
-                    <button id="Gettup01" onclick="tryGettup01()" style="display:none;">Try to get up!</button><br>
+                    <button id="Gettup01" onclick="tryGettup()" style="display:none;">Try to get up!</button><br>
                     <button id="SwitchIn01" style="display:none;" onclick="switchTo01()">Switch In!</button>
                 </div>
 
                 <div id="Fighter02" style="text-align:left">
-                    <h4 id="FighterName02">Sample Fighter 02</h3><br>
+                    <h4 id="FighterName02">Sample Fighter 02</h3><p id = fighter02Status> </p><br>
                     <progress id="fighter02Health" value="200" max="200"></progress><br><br>
-                    <div id="f2_Moves">
+                    <div id="f2_Moves" style="display:none;">
                         <button id="f2_Move1" onclick="move1()">Jab</button><br>
                         <button id="f2_Move2" onclick="move2()">Single Leg</button><br>
                         <button id="f2_Move3" onclick="move3()">Rear Naked Choke</button><br>
                         <button id="f2_Move4" onclick="move4()">Just Bleed</button><br>
                     </div>
-                    <button id="Gettup02" onclick="tryGettup02()" style="display:none;">Try to get up!</button><br>
-                    <button id="SwitchIn02" onclick="switchTo02()">Switch In!</button>
+                    <button id="Gettup02" onclick="tryGettup()" style="display:none;">Try to get up!</button><br>
+                    <button id="SwitchIn02" style="display:block;" onclick="switchTo02()">Switch In!</button>
                 </div>
 
                 <div id="Fighter03" style="text-align:left">
-                    <h4 id="FighterName03">Sample Fighter 03</h3><br>
+                    <h4 id="FighterName03">Sample Fighter 03</h3><p id = fighter03Status> </p><br>
                     <progress id="fighter03Health" value="200" max="200"></progress><br><br>
-                    <div id="f3_Moves">
+                    <div id="f3_Moves" style="display:none;">
                         <button id="f3_Move1" onclick="move1()">Jab</button><br>
                         <button id="f3_Move2" onclick="move2()">Single Leg</button><br>
                         <button id="f3_Move3" onclick="move3()">Rear Naked Choke</button><br>
                         <button id="f3_Move4" onclick="move4()">Just Bleed</button><br>
                     </div>
-                    <button id="Gettup03" onclick="tryGettup03()" style="display:none;">Try to get up!</button><br>
-                    <button id="SwitchIn03" onclick="switchTo03()">Switch In!</button>
+                    <button id="Gettup03" onclick="tryGettup()" style="display:none;">Try to get up!</button><br>
+                    <button id="SwitchIn03" style="display:block;" onclick="switchTo03()">Switch In!</button>
                 </div>
 
             </div>
@@ -106,19 +106,19 @@
             <div id="BadSide" style="width:33% ; float:right; padding:20px; border:2px">
 
                 <div id="Enemy01" style="text-align:left">
-                    <h3 id="EnemyName01">Sample Fighter 11<p id='enemy01Status'></p></h3><br>
+                    <h3 id="EnemyName01">Sample Fighter 11<p id='enemy01Status'> </p></h3><br>
                     <progress id="enemy01Health" value="200" max="200"></progress><br><br>
                     <br><br><br><br><br><br><br><br>
                 </div>
 
                 <div id="Enemy02" style="text-align:right">
-                    <h4 id="EnemyName02">Sample Fighter 12</h3><p id='enemy02Status'></p><br>
+                    <h4 id="EnemyName02">Sample Fighter 12</h3><p id='enemy02Status'> </p><br>
                     <progress id="enemy02Health" value="200" max="200"></progress><br><br>
                     <br><br>
                 </div>
 
                 <div id="Enemy03" style="text-align:right">
-                    <h4 id="EnemyName03">Sample Fighter 13</h3><p id='enemy03Status'></p><br>
+                    <h4 id="EnemyName03">Sample Fighter 13</h3><p id='enemy03Status'> </p><br>
                     <progress id="enemy03Health" value="200" max="200"></progress><br><br>
                     <br><br>
                 </div>
