--- a/webServer/index.html
+++ b/webServer/index.html
@@ -29,7 +29,7 @@
                 </li>
                 <li class="nav-item">
 
-                  <a class="nav-link" href="http://localhost:3000">Fight!</a>
+                  <a class="nav-link" href="http://192.168.194.99:3000">Fight!</a>
 
                 </li>
                 <li class="nav-item">
